Fixed the pop-out alignment
Corrected the pop-out alignment of the confirm logout

--- a/src/working student/WSProfile/ConfirmLogout.css
+++ b/src/working student/WSProfile/ConfirmLogout.css
@@ -45,7 +45,7 @@
 @media (max-width: 500px) {
   .logout-popup-content{
     position: fixed !important;
-    left: 40%;
+    left: 50%;
     transform: translateX(-50%);
     width: 85%;
     max-width: 350px;
